--- a/contrib/upstart/cjdns-dynamic.conf
+++ b/contrib/upstart/cjdns-dynamic.conf
@@ -1,4 +1,4 @@
-description "cjdns dynamic DNS peer resolver startup script"
+description "cjdns dynamic DNS peer resolver"
 
 author "Adam Novak <interfect@gmail.com>"
 # Based on cjsdns Upstart config by Sergey Davidoff <shnatsel@gmail.com>
@@ -11,33 +11,6 @@ stop on stopping cjdns
 respawn
 respawn limit 2 300
 
-pre-start script
-    if ! [ -e /etc/cjdns-dynamic.conf ]; then
-        ( # start a subshell to avoid side effects of umask later on
-            umask 077 # to create the file with 600 permissions without races
-
-            # Make an empty config file; nodes to contact go here.
-            touch /etc/cjdns-dynamic.conf
-
-            # By default we install a config, so this only happens if the user
-            # deletes it
-        ) # exit subshell; umask no longer applies
-        echo 'WARNING: A new cjdns-dynamic.conf file has been generated.'
-    fi
-
-    if (! test -e /etc/cjdns-dynamic.cjdnsadmin) && test -x /usr/lib/cjdns/cjdnsadminmaker.py; then
-        ( # start a subshell to avoid side effects of umask later on
-            umask 077 # to create the file with 600 permissions without races
-
-            # Make a cjdnsadmin file from the cjdroute.conf. We're not using
-            # /root/.cjdnsadmin because that would be silly.
-
-            # TODO: Make the cjdns Upstart job put something in /var that other
-            # root processes can read.
-            /usr/lib/cjdns/cjdnsadminmaker.py /etc/cjdns-dynamic.cjdnsadmin
-        ) # exit subshell; umask no longer applies
-        echo 'WARNING: A new cjdns-dynamic.cjdnsadmin file has been generated.'
-    fi
-end script
+pre-start exec /usr/lib/cjdns/dynamicEndpointsGenConf.sh
 
 exec /usr/lib/cjdns/dynamicEndpoints.py /etc/cjdns-dynamic.conf --adminInfo /etc/cjdns-dynamic.cjdnsadmin
