--- a/contrib/upstart/cjdns-dynamic.conf
+++ b/contrib/upstart/cjdns-dynamic.conf
@@ -1,4 +1,4 @@
-description "cjdns dynamic DNS peer resolver"
+description "dynamic DNS peer resolver for cjdns"
 
 author "Adam Novak <interfect@gmail.com>"
 # Based on cjsdns Upstart config by Sergey Davidoff <shnatsel@gmail.com>
